# RayTracing

./: .gitmodules  CMakeLists.txt  main.cc  mainwindow.cc  mainwindow.hh  mainwindow.ui  ray.cc  ray.hh  vcpkg.json
RayTracing/: CMakeLists.txt  Camera.cc  Components.cc  Components.hh  HitRecord.cc  HitRecord.hh  Random.hh  Ray.cc  Ray.hh
RayTracing/includes/RayTracing/: CMakeLists.txt  Camera.hh  Random.hh
tests/: CMakeLists.txt  tests.cc
